--- a/website/src/css/navbar.css
+++ b/website/src/css/navbar.css
@@ -36,8 +36,31 @@ li
 
 a
 {
-    color: white;
+    color: var(--main-text-color);
     font-weight: bold;
     text-decoration: none;
-    -webkit-text-stroke: 1px white;
+    -webkit-text-stroke: 1px var(--main-text-color);
+}
+
+.brightmode
+{
+    width: 3vw;
+    height: 1.5vw;
+    background-color: var(--other-main-bg-color);
+    position: relative;
+    border-radius: 30px;
+    left: 20vw;
+    border: solid 2px #0A192F;
+
+}
+
+.switch
+{
+    background-color: var(--main-bg-color);
+    height: 1.2vw;
+    width: 1.2vw;
+    top: 0.15vw;
+    left: 0.2vw;
+    position: absolute;
+    border-radius: 50%;
 }
