--- a/website/src/css/index.css
+++ b/website/src/css/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 
@@ -17,4 +18,3 @@ code {
 p {
   margin: 0;
 }
-
