--- a/website/src/css/navbar.css
+++ b/website/src/css/navbar.css
@@ -1,28 +1,31 @@
 nav
 {
-    font-size: 2.2vw;
+    font-size: 2rem;
     border-bottom: solid 1px black;
     position: fixed;
     z-index: 10;
     width: 100vw;
     height: 5vw;
     background-color: rgba(256, 256, 256, 0.3);
+
 }
 
 ul
 {
+    height: inherit;
     position: relative;
     display: flex;
     list-style: none;
-    justify-content: flex-start;
-    padding-left: 0px;
+    gap: 5rem;
     align-items: center;
+    justify-content: center;
+    padding: 0;
     margin: 0;
+    right: 3vw;
 }
 
 li
 {
-    margin-right: 6vw;
     text-transform: capitalize;
 }
 
@@ -30,8 +33,8 @@ li
 {
     background-color: white;
     height: 5vw;
-    width: 10vw;
-    margin-right:2vw;
+    width: 5vw;
+    position: absolute;
 }
 
 a
@@ -47,9 +50,10 @@ a
     width: 3vw;
     height: 1.5vw;
     background-color: var(--other-main-bg-color);
-    position: relative;
+    position: absolute;
+    top: 1.8vw;
+    right: 4vw;
     border-radius: 30px;
-    left: 20vw;
     border: solid 2px #0A192F;
 
 }
