--- a/website/src/css/sections.css
+++ b/website/src/css/sections.css
@@ -10,8 +10,10 @@
 
   }
 
-.App
+#App
 {
-    scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
