--- a/website/src/css/projets.css
+++ b/website/src/css/projets.css
@@ -6,7 +6,6 @@
     height: 100vh;
     z-index: 1;
     background: linear-gradient(var(--main-bg-color), var(--second-bg-color));
-    scroll-snap-align: start;
 }
 
 .projets
@@ -24,20 +23,27 @@
     text-align: center;
     font-size: 2.2rem;
     color: var(--main-text-color);
+    text-align: center;
 }
 
 .cards
 {
-    margin-top: 2vh;
     display: flex;
-    gap: 5rem;
-    justify-content: center;
+    width: 60vw;
+    gap: 3rem;
 }
 
-.card
+.cards img
 {
-    background-color: green;
-    width: 25rem;
-    height: 17rem;
+    width: 20rem;
+    height: 15rem;
     border-radius: 16px;
+    object-fit: cover;
+}
+
+.projets .carousel
+{
+    margin-top: 4vh;
+    width: 60vw;
+    margin-left: 10vw;
 }
