--- a/website/src/css/index.css
+++ b/website/src/css/index.css
@@ -5,8 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 
@@ -17,4 +15,5 @@ code {
 
 p {
   margin: 0;
+  font-family: 'Roboto slab';
 }
