--- a/website/src/css/competences.css
+++ b/website/src/css/competences.css
@@ -1,7 +1,7 @@
 #competences-section
 {
     position: sticky;
-    top: 0vw;
+    top: 0vh;
     width: 100vw;
     height: 100vh;
     z-index: 1;
@@ -20,16 +20,23 @@
     padding: 0 5vw;
 }
 
+.presentation, .description
+{
+    align-self: center;
+    position: relative;
+    bottom: 2vw;
+}
+
 .presentation .text
 {
-    font-size: 1.8rem;
+    font-size: calc(1rem + 0.5vw);
     width: 40vw;
     color: var(--main-text-color);
 }
 
 .description .text
 {
-    font-size: 3rem;
+    font-size: 2rem;
     width: 40vw;
     color: var(--main-text-color);
 }
@@ -54,7 +61,7 @@
 
 .presentation-box-text
 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: bold;
     color: var(--main-text-color);
 }
@@ -84,6 +91,8 @@
     background-color: var(--container-color);
     border-radius: 30px;
     padding: 1vw 1vw;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow-y: auto;
 }
 
 .container-text
@@ -96,11 +105,10 @@
 .container-box
 {
     display: flex;
-    flex-wrap: nowrap;
-    gap: 2rem;
+    flex-wrap: wrap;
+    gap: 0rem 1rem;
     padding-left: 1rem;
     overflow-x: scroll;
-    overflow-y: hidden;
 }
 
 .container-box::-webkit-scrollbar {
@@ -113,24 +121,29 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     margin-top: 0.5vw;
 }
 
 .langage
 {
     border-radius: 50%;
-    width: 6rem;
-    height: 6rem;
+    width: calc(3rem + 2vw);
+    height: calc(3rem + 2vw);
     object-fit: contain;
 }
 
 .box-text
 {
-    font-size: 1.2rem;
+    font-size: calc(0.7rem + 0.4vw);
     font-weight: bold;
     position: relative;
     top: 0.2vw;
     white-space: nowrap;
+}
+
+.langage:hover
+{
+    cursor: pointer;
 }
