--- a/website/src/css/contact.css
+++ b/website/src/css/contact.css
@@ -16,3 +16,91 @@
     height: 93vh;
     width:100vw;
 }
+
+.contact .title
+{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: 2.2rem;
+    color: var(--main-text-color);
+    text-align: center;
+}
+
+.contact form
+{
+    width: 40.8rem;
+    margin: auto;
+    margin-top: calc((100vh - 10vw - 47px - 24rem) / 2);
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.contact form div
+{
+    width: 40.8rem;
+    display: flex;
+    gap: 1.5rem;
+}
+
+.contact form div input
+{
+    width: 100%;
+    height: 2.5rem;
+    padding: 0.2rem 0.4rem;
+    border-radius: 16px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.contact form .email
+{
+    width: 40rem;
+    height: 2.5rem;
+    padding: 0.2rem 0.4rem;
+    border-radius: 16px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.contact form textarea
+{
+    width: 40rem;
+    height: 10rem;
+    padding: 0.4rem 0.4rem;
+    border-radius: 16px;
+    border: none;
+    resize: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.contact form .send
+{
+    width: 40.8rem;
+    height: 2.9rem;
+    padding: 0.2rem 0.4rem;
+    border-radius: 16px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background: linear-gradient(to right, #7f9efa, #394fbf);
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 530;
+}
+
+.contact form .send:hover
+{
+    cursor: pointer;
+    background: linear-gradient(to right, #9eb5fa, #5163bd);
+}
+
+input:focus, textarea:focus
+{
+    outline: none;
+}
+
+.feFunc
+{
+    color: #a3bce4
+}
