--- a/website/src/css/apropos.css
+++ b/website/src/css/apropos.css
@@ -12,12 +12,14 @@
 .apropos
 {
     position: absolute;
-    top: 7vw;
+    top: 5vw;
     height: 93vh;
     width:100vw;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 0 10vw;
+    margin-top: -5vw;
 }
 
 .apropos .title
@@ -44,7 +46,7 @@
 .apropos .arrow
 {
     position: absolute;
-    bottom: 10rem;
+    bottom: 5rem;
     left: 47.5vw;
     width: 5vw;
 }
