--- a/website/src/css/competences.css
+++ b/website/src/css/competences.css
@@ -22,6 +22,7 @@
 
 .presentation, .description
 {
+    overflow: hidden;
     align-self: center;
     position: relative;
     bottom: 2vw;
@@ -29,7 +30,7 @@
 
 .presentation .text
 {
-    font-size: calc(1rem + 0.5vw);
+    font-size: calc(0.5rem + 0.9vw);
     width: 40vw;
     color: var(--main-text-color);
 }
@@ -53,15 +54,15 @@
 {
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 50%;
-    width: 6vw;
-    height: 6vw;
+    width: 4vw;
+    height: 4vw;
     object-fit: contain;
     filter: drop-shadow(0px 0px 6px rgb(78, 76, 76));
 }
 
 .presentation-box-text
 {
-    font-size: 1.2rem;
+    font-size: calc(0.5rem + 0.9vw);
     font-weight: bold;
     color: var(--main-text-color);
 }
@@ -76,7 +77,7 @@
 .competences .title
 {
     margin-left: 2.5vw;
-    font-size: 2.2rem;
+    font-size: calc(1rem + 0.9vw);
     font-weight: bold;
     color: var(--main-text-color);
 }
@@ -97,7 +98,7 @@
 
 .container-text
 {
-    font-size: 2.2rem;
+    font-size: calc(1rem + 0.9vw);
     color: #0A192F;
     margin-left: 1.4vw;
 }
