--- a/website/src/css/projets.css
+++ b/website/src/css/projets.css
@@ -198,7 +198,7 @@
 {
     width: 40vw;
     height: calc(100vh - 5vw);
-    background-color: var(--other-main-bg-color);
+    background-color: var(--container-color);
     position: absolute;
     right: 0px;
     top: 5vw;
@@ -206,6 +206,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #0A1920;
 }
 
 #projets-section .info .back
@@ -214,7 +215,6 @@
     top: 4vh;
     right: 5vw;
     font-size: 3rem;
-    color: var(--other-main-text-color);
 }
 
 #projets-section .info .back:hover
@@ -224,17 +224,15 @@
 
 #projets-section .info .name
 {
-    color: var(--other-main-text-color);
-    font-size: 2.6rem;
+    font-size: calc(1rem + 1.5vw);
     font-weight: bold;
     margin: 4vh 4vh 3vh 4vh;
 }
 
 #projets-section .info .desc
 {
-    color: var(--other-main-text-color);
-    font-size: 1.1rem;
-    padding: 0 7rem;
+    font-size: calc(0.7rem + 0.5vw);
+    padding: 0 6vw;
 }
 
 #projets-section .info .tags
@@ -242,15 +240,27 @@
     display: flex;
     gap: 1rem;
     align-self: baseline;
-    padding: 2vh 7rem;
+    padding: 2vh 6vw;
 }
 
 #projets-section .info .tags p
 {
     padding: 0.3rem 0.8rem;
     background-color: gray;
-    color: var(--other-main-text-color);
-    font-size: 1rem;
+    font-size: calc(0.5rem + 0.5vw);
     border-radius: 12px;
     font-weight: bold;
+}
+
+#projets-section .info .link
+{
+    align-self: baseline;
+    padding: 0vh 7rem;
+    font-size: calc(0.6rem + 0.5vw);
+}
+
+#projets-section .info .link span
+{
+    text-decoration: underline;
+    cursor: pointer;
 }
